[build-system]
requires = ["setuptools >= 68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "davasus"
version = "0.0.1"
description = "DaVaSus — pasture mother-cow sensor data ingestion and analysis toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bart R. H. Geurten", email = "bart.geurten@otago.ac.nz"},
]
keywords = [
    "cattle", "pasture", "sensor", "sqlite", "precision-livestock",
    "smaxtec", "eshepherd", "circadian", "zeitgeber",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "tqdm",
]

[project.optional-dependencies]
analysis = [
    "pandas",
    "numpy",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "openpyxl",
    "pyyaml",
    "rich",
    "astral",
]
dev = [
    "pytest >= 7.0",
    "pytest-cov >= 4.0",
    "ruff >= 0.4",
]
docs = [
    "sphinx >= 7.0",
    "sphinx-rtd-theme",
]

[project.scripts]
davasus-ingest = "davasus.cli:ingest_main"
davasus-validate = "davasus.cli:validate_main"
davasus-broken-stick = "davasus.cli:broken_stick_main"

[project.urls]
Repository = "https://github.com/zerotonin/davasus"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter; ignored for prose-heavy docstrings
